--- a/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
@@ -135,6 +135,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-university"></i></div>
                             Ürün Detay
                         </a>
+                        <a class="nav-link" href="/Static/EasyTable/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-signal"></i></div>
+                            Hızlı Bakış Tabloları
+                        </a>
 
 
 
