--- a/Mvc_Online_Commercial_Automation/Views/Employee/Index.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Employee/Index.cshtml
@@ -23,7 +23,9 @@
         <tr>
             <td>@item.EmployeeID</td>
             <td>@item.EmployeeName @item.EmployeeSurname</td>
-            <td>@item.EmployeeImage</td>
+            <td>
+                <img src="@item.EmployeeImage" style="width:120px; height:120px; " />
+            </td>
             <td>@item.Department.DepartmentName</td>
             <td><a href="/Department/DepartmentsEmployeeDetails/@item.EmployeeID/" class="btn btn-outline-danger">Satışlar</a></td>
             <td><a href="/Employee/EmployeeUpdate/@item.EmployeeID/" class="btn btn-outline-warning">Güncelle</a></td>
