--- a/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
@@ -66,6 +66,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-user-md"></i></div>
                             Personeller
                         </a>
+                        <a class="nav-link" href="/Todo/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-user-md"></i></div>
+                            Yapılacaklar
+                        </a>
 
 
 
