--- a/Mvc_Online_Commercial_Automation/Views/Category/Index.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Category/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Mvc_Online_Commercial_Automation.Models.Classes
-@model List<Category>
+@using PagedList
+@using PagedList.Mvc
+@model PagedList.IPagedList<Category>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -7,7 +9,7 @@
 
 <table id="tbl1" class="table table-bordered" style="margin-top:50px">
     <tr>
-        <th>ID</th>
+        @*<th>ID</th>*@
         <th>Kategori Adı</th>
         <th>Sil</th>
         <th>Güncelle</th>
@@ -16,7 +18,7 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.CategoryID</td>
+            @*<td>@item.CategoryID</td>*@
             <td>@item.CategoryName</td>
             <td><a href="/Category/CategoryDelete/@item.CategoryID/" class="btn btn-outline-danger">Sil</a></td>
             <td><a href="/Category/CategoryUpdate/@item.CategoryID/" class="btn btn-outline-warning">Güncelle</a></td>
@@ -26,23 +28,5 @@
     }
 
 </table>
+@Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Index", new { sayfa }))
 <a href="/Category/CategoryAdd/" class="btn btn-outline-success"> Yeni Kategori Ekle</a>
-
-
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css" rel="stylesheet" />
-<link href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-
-<script>
-    $('#tbl1').dataTable({
-        "language": {
-
-            "url": "//cdn.datatables.net/plug-ins/1.10.12/i18n/Turkish.json"
-
-        }
-    });
-</script>
-
