--- a/Mvc_Online_Commercial_Automation/Views/Department/DepartmentsDetails.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Department/DepartmentsDetails.cshtml
@@ -17,10 +17,8 @@
 <table class="table table-bordered">
     
     <tr>
-        <th>ID</th>
-        <th>Ad</th>
-        <th>SoyAd</th>
-        <th>Resim</th>
+
+        <th>Ad - Soyad</th>
         <th>Satışlar</th>
 
     </tr>
@@ -28,10 +26,7 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.EmployeeID</td>
-            <td>@item.EmployeeName</td>
-            <td>@item.EmployeeSurname</td>
-            <td>@item.EmployeeImage</td>
+            <td>@item.EmployeeName @item.EmployeeSurname</td>
              <td> <a href="/Department/DepartmentsEmployeeDetails/@item.EmployeeID" class="btn btn-outline-secondary">Satışlar</a></td>
         </tr>
     }
