--- a/Mvc_Online_Commercial_Automation/Views/Invoice/Index.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Invoice/Index.cshtml
@@ -10,9 +10,7 @@
 
 <table id="tbl1" class="table table-bordered" style="margin-top:50px">
     <tr>
-        <th>ID</th>
-        <th>Seri no</th>
-        <th>Sıra no</th>
+        <th>Seri Sıra no</th>
         <th>Vergi Dairesi</th>
         <th>Tarih</th>
         <th>Saat</th>
@@ -21,22 +19,22 @@
         <th>Teslim Alan</th>
         <th>Güncelle</th>
         <th>Detaylar</th>
+        <th>Yeni Kalem</th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.InvoiceID</td>
-            <td>@item.InvoiceSerialNumber</td>
-            <td>@item.InvoiceNumber</td>
+            <td>@item.InvoiceSerialNumber   @item.InvoiceNumber</td>
             <td>@item.TaxOffice</td>
             <td>@item.Date.ToShortDateString()</td>
             <td>@item.Hours</td>
-            <td>@item.TotalPrice</td>
+            <td>@item.TotalPrice ₺</td>
             <td>@item.DeliveredBy</td>
             <td>@item.ReceivedBy</td>
             <td><a href="/Invoice/InvoiceUpdate/@item.InvoiceID/" class="btn btn-outline-primary">Güncelle</a></td>
             <td><a href="/Invoice/InvoiceDetails/@item.InvoiceID/" class="btn btn-outline-warning">Detaylar</a></td>
+            <td><a href="/Invoice/NewInvoiceItem/@item.InvoiceID/" class="btn btn-outline-secondary">Kalem</a></td>
 
         </tr>
 
@@ -45,6 +43,38 @@
 
 </table>
 <a href="/Invoice/InvoiceAdd/" class="btn btn-outline-success"> Yeni Fatura Ekle</a>
+<br /><br />
+<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#Modal1">Yeni Pop Up Penceresi</button>
+
+
+<div class="modal" id="Modal1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Diyalog ekranı</h2>
+            </div>
+            <div class="modal-body">
+                <table class=" table table-bordered">
+                    <tr>
+                        <th>Seri No</th>
+                        <th>Sıra No</th>
+                        <th>Tutar No</th>
+                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.InvoiceSerialNumber</td>
+                            <td>@item.InvoiceNumber</td>
+                            <td>@item.TotalPrice</td>
+                        </tr>
+                    }
+
+                </table>
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Tamam</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
