--- a/Mvc_Online_Commercial_Automation/Views/Login/Index.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Login/Index.cshtml
@@ -124,12 +124,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <p>Bilgilerinizi Lütfe eksiksiz giriniz</p>
                     <div class="clear"></div>
                     <div class="login-agileits-top">
-                        <form action="#" method="post">
+                        @using (Html.BeginForm("AdminLogin", "Login", FormMethod.Post))
+                        {
                             <input type="text" class="name" name="Username" Placeholder="Kullanıcı Adı" required="" />
                             <input type="password" class="email" name="Password" Placeholder="Şifreniz" required="" />
                             <input type="submit" value="Giriş Yap">
-                        </form>
-                    </div>
+                        }
+                        </div>
                 </div>
             </div>
 
