--- a/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
@@ -115,10 +115,6 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-barcode"></i></div>
                             Faturalar
                         </a>
-                        <a class="nav-link" href="/InvoiceItem/Index/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-plane"></i></div>
-                            Fatura Kalemler
-                        </a>
                         <a class="nav-link" href="/Expense/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-gift"></i></div>
                             Giderler
@@ -151,7 +147,7 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Aktif Olan Kullanıcı:</div>
-                    Kullanıcı adı gelecek
+                    @HttpContext.Current.User.Identity.Name
                 </div>
             </nav>
         </div>
