--- a/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Shared/_AdminLayout.cshtml
@@ -67,8 +67,16 @@
                             Personeller
                         </a>
                         <a class="nav-link" href="/Todo/Index/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user-md"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-anchor"></i></div>
                             Yapılacaklar
+                        </a>
+                        <a class="nav-link" href="/Cargo/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
+                            Kargolar
+                        </a>
+                        <a class="nav-link" href="/QR/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-qrcode"></i></div>
+                            QR kod oluştur
                         </a>
 
 
@@ -122,6 +130,10 @@
                         <a class="nav-link" href="/Product/ListProduct/">
                             <div class="sb-nav-link-icon"><i class="fas fa-print"></i></div>
                             PDF ~ EXCEL
+                        </a>
+                        <a class="nav-link" href="/Alert/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
+                            Alert
                         </a>
                         <a class="nav-link" href="/Static/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-database"></i></div>
