--- a/Mvc_Online_Commercial_Automation/Views/Category/CategoryAdd.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Category/CategoryAdd.cshtml
@@ -4,21 +4,27 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
+<script src="~/Scripts/jquery-3.7.0.js"></script>
 <br />
 <h2>Yeni Kategori Sayfası</h2>
 <br />
 <form method="post" class="form form-group">
 
     <div class="form form-group">
-        @Html.LabelFor(x=> x.CategoryName)
+        @Html.LabelFor(x => x.CategoryName)
         <br />
-        @Html.TextBoxFor(x=> x.CategoryName , new {@class = "form-control"})
+        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
     </div>
     <br />
-    <button class="btn btn-success">Kaydet</button>
+    <button class="btn btn-success" id="btn1">Kaydet</button>
+
 
 
 
 </form>
 
+<script>
+    $('#btn1').click(function () {
+        alert("kategori eklendi");
+    });
+</script>
