--- a/Mvc_Online_Commercial_Automation/Views/Cargo/Index.cshtml
+++ b/Mvc_Online_Commercial_Automation/Views/Cargo/Index.cshtml
@@ -35,7 +35,7 @@
             <td>@item.Employee</td>
             <td>@item.Cari</td>
             <td>@item.Date.ToShortDateString()</td>
-            <td><a href="/Cargo/CargoDetails/@item.CargoDetailId/" class="btn btn-outline-primary">Detaylar</a></td>
+            <td><a href="/Cargo/CargoDetails/@item.CargoTrackingNumber/" class="btn btn-outline-primary">Detaylar</a></td>
         </tr>
 
 
